# httpexec

./: .gitignore  Makefile  README.rst  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish-test.yml  publish.yml  test.yml  tests.yml
docs/: .gitignore  conf.py  httpexec.puml  index.rst
etc/: config.toml  config.yml
src/httpexec/: __init__.py  __main__.py  __version__.py  asgi.py  cli.py
src/httpexec/etc/: defaults.toml
tests/assets/: echo
tests/httpexec/: test_api.py  test_asgi.py  test_cli.py
tests/httpexec/core/: test_config.py  test_logger.py
tests/integration/: test_app.py
tests/unit/: test_asgi.py
